--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "remix dev -c \"node server.mjs\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
