--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "work-contorller",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "remix dev -c \"node server.mjs\"",
